--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body,html {
   font-family: sans-serif;
 }
 
-
 .bg-image{
   background: url('./background.jpg');
   filter: blur(4px);
@@ -80,14 +79,10 @@ kbd {
 
 /** For Vertical Usage - 320 en son ayarlansın**/
 
-
 @media screen and (min-width: 361px) and (max-width: 767px) {
   kbd { display:none; }
   .sound {font-size: 2.6vh;}
   .key {padding: 41px 0px;text-shadow: 0 0 .5rem black;top: -70%;}
-
-.key.green {}
-  .keys {top: 35vh;}
 }
 
 @media screen and (min-width: 280px) and (max-width: 360px) {
@@ -96,7 +91,6 @@ kbd {
   .key {padding: 41px 0px;text-shadow: 0 0 .5rem black;}
   .keys {top: 25vh;}
 }
-
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   kbd { display:none; }
@@ -115,15 +109,17 @@ kbd {
   .key {padding: 30px 0px;top: -77%;}
 }
 
-
 @media screen and (min-height: 720px) and (max-height: 767px) {
   .key {padding: 30px 0px;top: -35%;}
+}
 
 @media screen and (min-height: 541px) and (max-height: 640px) {
   .key {padding: 30px 0px;top: -35%;}
+}
 
 @media screen and (min-height: 360px) and (max-height: 540px) {
   .key {padding: 30px 0px;top: -35%;}
+}
 
 @media screen and (min-height: 641px) and (max-height: 767px) {
   .key {padding: 30px 0px;top: -35%;}
